# rede

./: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
hud-standalone/: HudApp.tsx  demo.ts  index.ts  types.ts
hud-standalone/components/: Equalizer.tsx  FloatingHUD.tsx  HUDCapsule.tsx
hud-standalone/hooks/: useHudFade.ts  useHudVisibility.ts
hud-standalone/stores/: hudSettingsStore.ts  recordingStore.ts
src/: App.tsx  demo.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accessibility/: mod.rs  permissions.rs  text_insertion.rs
src-tauri/src/audio/: capture.rs  devices.rs  mod.rs  processing.rs
src-tauri/src/keyboard/: hotkey.rs  listener.rs  mod.rs
src-tauri/src/storage/: database.rs  keychain.rs  mod.rs
src-tauri/src/system/: launch.rs  mod.rs  notifications.rs  tray.rs
src/components/auth/: AuthScreen.tsx  LoginForm.tsx  RegisterForm.tsx
src/components/common/: Button.tsx  Input.tsx  Toggle.tsx  WindowShell.tsx
src/components/hud/: Equalizer.tsx  FloatingHUD.tsx  HUDCapsule.tsx
src/components/menu/: MenuBarDropdown.tsx  (+1 more)
src/hooks/: useAudio.ts  useAuth.ts  useEqualizer.ts  useHotkey.ts  useSettings.ts
src/services/: claude.ts  gemini.ts  stripe.ts  supabase.ts  whisper.ts
src/stores/: authStore.ts  historyStore.ts  recordingStore.ts  settingsStore.ts
src/types/: api.ts  index.ts  models.ts
src/utils/: colors.ts  constants.ts  formatters.ts  helpers.ts
(+6 files in other folders)
